--- a/_posts/2019-01-22-new2.md
+++ b/_posts/2019-01-22-new2.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "알고2"
+title:  " 포폴2"
 date:   2019-01-20 17:15:11 +0000
-categories: [Algo]
-tags: [Algo]
+categories: [portfolio]
+tags: [portfolio]
 ---
 ㅎ
