--- a/_posts/2019-01-20-secondex.md
+++ b/_posts/2019-01-20-secondex.md
@@ -7,4 +7,4 @@ tags: [algorithm]
 ---
 두번째인데 글이 올라가나 `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, 이거슨 연습용 레이아웃 맞추면 들어갈까.
 ![title](/images/coffee11.jpg){: width="100" height="100"}
-<img src="c://gaeungyeongsul/gaeungyeongsul.github.io/images/coffee11.jpg" width="100" height="100">
+<img src="/images/coffee11.jpg" width="100" height="100">
