--- a/_posts/post_algo/2019-01-25-cod1.md
+++ b/_posts/post_algo/2019-01-25-cod1.md
@@ -6,7 +6,9 @@ date:   2019-01-20 17:15:11 +0000
 categories: [algorithm]
 tags: [algorithm]
 ---
-```문제
+문제
+<br>
+```
 An array A consisting of N integers is given. Rotation of the array means that each element is shifted right by one index, and the last element of the array is moved to the first place. For example, the rotation of array A = [3, 8, 9, 7, 6] is [6, 3, 8, 9, 7] (elements are shifted right by one index and 6 is moved to the first place).
 
 The goal is to rotate array A K times; that is, each element of A will be shifted to the right K times.
@@ -46,7 +48,10 @@ In your solution, focus on correctness. The performance of your solution will no
 
 Copyright 2009–2019 by Codility Limited. All Rights Reserved. Unauthorized copying, publication or disclosure prohibited.
 ```
-```java
+<br>
+답
+<br>
+~~~java
 class Solution {
     public int[] solution(int[] A, int K) {
         int rotation = 0;
@@ -64,4 +69,4 @@ class Solution {
         return B;
     }
 }
-```
+~~~
