--- a/_posts/post_algo/2019-01-25-cod1.md
+++ b/_posts/post_algo/2019-01-25-cod1.md
@@ -51,7 +51,7 @@ Copyright 2009–2019 by Codility Limited. All Rights Reserved. Unauthorized cop
 <br>
 답
 <br>
-~~~java
+```java
 class Solution {
     public int[] solution(int[] A, int K) {
         int rotation = 0;
@@ -69,4 +69,4 @@ class Solution {
         return B;
     }
 }
-~~~
+```
