--- a/_posts/post_portfolio/2019-01-25-port1_naver.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver.md
@@ -6,6 +6,11 @@ date:   2019-01-25 17:15:11 +0000
 categories: [portfolio]
 tags: [portfolio]
 ---
+<style>
+img{
+  border : 1px solid #ededed;
+}
+</style>
 포트폴리오 1. 네이버로 회원가입 및 로그인
 <br>
 웹사이트 포트폴리오의 사진 및 코드를 설명하겠습니다.
