--- a/_posts/post_portfolio/2019-01-25-port1_naver.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title:  "포트폴리오-1. 네이버로 회원가입 및 로그인
-"
+title:  "포트폴리오- 1.네이버 아이디로 회원가입 및 로그인 1"
 date:   2019-01-25 17:15:11 +0000
 categories: [portfolio]
 tags: [portfolio]
@@ -11,23 +10,94 @@ img{
   border : 1px solid #ededed;
 }
 </style>
-포트폴리오 1. 네이버로 회원가입 및 로그인
+포트폴리오- 1.네이버 아이디로 회원가입 및 로그인 1
 <br>
 웹사이트 포트폴리오의 사진 및 코드를 설명하겠습니다.
+<br>
+참고 : 코드의 일부분만 사용하였으며 사진 상 footer는 생략하였습니다.
 
 >메인페이지
 
 <br>
 메인페이지 상단의 로그인, 회원가입을 클릭하면 각 로그인, 회원가입 페이지로 넘어갑니다.
 <br>
-사진 상 footer는 생략하겠습니다.
 <br><br>
 <img src="/images/petst/main/main.jpg" width="500" height="600">
 <br>
 <br>
 
->회원가입
+>네이버로 회원가입
 
+1. 회원가입 클릭 시 다음 컨트롤러로 이동합니다.<br>
+```java
+@RequestMapping(value="/joinwith.do")
+    public ModelAndView joinwith(HttpSession session, Model model) {
+
+        /* 네이버아이디로 인증 URL을 생성한 후*/
+        String naverAuthUrl = naverLoginBO.getAuthorizationUrl(session);
+
+        /* 아래 사진의 View로 전달 */
+        return new ModelAndView("user/joinwith", "url", naverAuthUrl);
+    }
+```
+<br>
+joinwith.jsp<br>
 <img src="/images/petst/join_login/joinwith.jpg" width="500" height="400">
+```html
+<a href="terms_use.do"> <img src="일반회원가입사진.png"></a>
+<a href="${url}"> <img src="네이버회원가입버튼사진.png"></a>
+```
 
-<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/joinwith.jpg" width="400" height="500">
+2. 로그인 클릭 시 다음 컨트롤러로 이동합니다.<br>
+```java
+  @RequestMapping(value="/loginForm.do")
+    public ModelAndView login(HttpSession session, @RequestParam(defaultValue="0") int state) {
+    	ModelAndView mav = new ModelAndView();
+        /* 네이버아이디로 인증 URL을 생성한 후 아래 사진의 View로 전달 */
+        String naverAuthUrl = naverLoginBO.getAuthorizationUrl(session);
+        mav.addObject("url", naverAuthUrl);
+        mav.setViewName("user/loginForm");
+        return mav;
+    }
+    }
+```
+<br>
+loginForm.jsp<br>
+<img src="/images/petst/join_login/login.jpg" width="400" height="300">
+```html
+<td width="150px" style="text-align: left;">네이버로 로그인</td>
+<td align="right">
+  <a href="${url}">
+    <img src="네이버로 로그인 사진.png">
+	</a>
+</td>
+```
+<br>
+3. 공통
+<br>
+따라서 네이버로 로그인 버튼 클릭 시 네이버 인증 URL로 이동하여 로그인 창이 뜹니다.
+<br>
+<br>
+<img src="/images/petst/join_login/naverlogin.jpg" width="400" height="300">
+<br>
+<br>
+로그인 성공시 callback url을 호출합니다.
+```java
+@RequestMapping("/callback.do")
+	public String callback(@RequestParam String code, @RequestParam String state, HttpSession session, Model model) throws IOException {
+		OAuth2AccessToken oauthToken = naverLoginBO.getAccessToken(session, code, state);
+		NaverUser naverUser = naverLoginBO.getUserProfile(oauthToken);
+		session.setAttribute("naverUser", naverUser);
+		String user_id = naverUser.getId();
+		if(userService.getUserbyId(user_id)) {
+      //DB에 아이디(token)가 없으면 회원가입 동의 창으로
+			return "redirect:/terms_use.do";
+		}
+		//DB에 아이디(token)가 아이디 있으면 로그인 성공
+		session.setAttribute("user_id", naverUser.getId());
+		session.setAttribute("naver", naverUser);
+		return "redirect:/main.do";
+	}
+```
+
+이렇게 네이버 로그인이 가능하며, 네이버로 회원가입은 다음 게시글에 포스팅하겠습니다.
