--- a/_posts/post_portfolio/2019-01-25-port1_naver2.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver2.md
@@ -16,7 +16,7 @@ img{
 
 >네이버로 회원가입
 
-[이전글](https://github.com/jekyll/jekyll/wiki/themes) : 네이버로 로그인 후 callback url를 호출하여 DB에 아이디(token)가 있는 경우 `redirect:/terms_use.do`가 실행됩니다. 
+[이전글]https://gaeungyeongsul.github.io/portfolio/2019/01/25/port1_naver.html) : 네이버로 로그인 후 callback url를 호출하여 DB에 아이디(token)가 있는 경우 `redirect:/terms_use.do`가 실행됩니다. 
 
 
 
