--- a/_posts/post_portfolio/2019-01-25-port1_naver2.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver2.md
@@ -14,10 +14,76 @@ img{
 <br>
 웹사이트 포트폴리오의 사진 및 코드를 설명하겠습니다.
 
->네이버로 회원가입
+>약관 동의
 
-[이전글]https://gaeungyeongsul.github.io/portfolio/2019/01/25/port1_naver.html) : 네이버로 로그인 후 callback url를 호출하여 DB에 아이디(token)가 있는 경우 `redirect:/terms_use.do`가 실행됩니다. 
+<br>
+[이전글](https://gaeungyeongsul.github.io/portfolio/2019/01/25/port1_naver.html)
+에서 보듯 네이버로 로그인 후 callback url를 호출하는데 코드를 보면 그 전에 네이버에서 받아온 회원정보인 naverUser 객체를 session에 저장해 둡니다. 이유는 session에 저장한 naverUser 객체를 회원가입 때 사용하기 위해서 입니다.
 
+```java
+@RequestMapping("/callback.do")
+	public String callback(@RequestParam String code, @RequestParam String state, HttpSession session, Model model)
+			throws IOException {
+		OAuth2AccessToken oauthToken = naverLoginBO.getAccessToken(session, code, state);
+		NaverUser naverUser = naverLoginBO.getUserProfile(oauthToken);
+		session.setAttribute("naverUser", naverUser);
+		String user_id = naverUser.getId();
+		if(userService.getUserbyId(user_id)) { //DB에 userid 없으면 true, 회원가입 동의 창
+			return "redirect:/terms_use.do";
+		}
+	}
+```
+DB에 회원정보가 없다면 약관동의 페이지로 이동합니다.
+<br>
+<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/agree.jpg" width="600" height="500">
+<br><br>
+'동의하지 않음' 버튼을 누를 경우 nochk() 함수가 실행되어 가입이 불가하며,
+<br>
+'동의' 버튼을 누를 경우 chk()함수가 실행되어 체크박스 체크 여부를 확인하여 체크가 되어있지 않은 경우, 회원가입을 방지하였습니다.
+<br>
+alert창
+<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/terms1.jpg" width="280" height="80">
+<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/terms2.jpg" width="280" height="80">
+<br><br>
+terms_use.jsp
+```html
+<script type="text/javascript">
+function chk(){
+ var req = document.form.req.checked;
+ var num = 0;
+ if(req == true){
+  num = 1;
+ }
+ if(num==1){
+  document.form.submit();
+ }else{
+  alert("개인정보 약관에 동의하셔야 합니다.");
+ }
+}
+function nochk(){
+ alert("동의하지 않으면 가입하실 수 없습니다");
+}
+</script>
+<form action= "join_naverForm.do" name="form" method="post">
+  <table>
+    <tr>
+      <td>
+        <textarea>약관내용</textarea>
+          <input type="checkbox" name="req"> 개인정보 수집 및 이용에 동의합니다.
+      </td>
+  </tr>
+  <tr>
+   <td>
+    <input type="button" value="동의" onclick="chk()">
+    <input type="button" value="동의하지 않습니다" onclick="nochk()">
+   </td>
+  </tr>
+ </table>
+</form>
+```
+
+>회원가입 폼
+ㅇㄹ
 
 
 <img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/login.jpg" width="400" height="300">
