--- a/_posts/post_portfolio/2019-01-25-port1_naver2.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver2.md
@@ -42,8 +42,8 @@ DB에 회원정보가 없다면 약관동의 페이지로 이동합니다.
 '동의' 버튼을 누를 경우 chk()함수가 실행되어 체크박스 체크 여부를 확인하여 체크가 되어있지 않은 경우, 회원가입을 방지하였습니다.
 <br>
 alert창
-<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/terms1.jpg" width="280" height="80">
-<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/terms2.jpg" width="280" height="80">
+<img src="/images/petst/join_login/terms1.jpg" width="280" height="80">
+<img src="/images/petst/join_login/terms2.jpg" width="280" height="80">
 <br><br>
 terms_use.jsp
 ```html
@@ -83,7 +83,111 @@ function nochk(){
 ```
 
 >회원가입 폼
-ㅇㄹ
 
+<img src="/images/petst/join_login/joinform1.jpg" width="600" height="500">
+<br><br>
+예외처리<br>
+<img src="/images/petst/join_login/joinform2.jpg" width="400" height="350">
+<br>
 
-<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/login.jpg" width="400" height="300">
+>닉네임 중복 여부
+
+<img src="/images/petst/join_login/nickexcept.jpg" width="300" height="40">
+
+<br><br>
+ajax통신을 사용하여 비동기적으로 브라우저와 서버가 데이터를 주고 받는 방식을 사용하였습니다. <br>
+닉네임 중복여부를 확인 하기 위해 jsp단에서 사용자가 입력한 닉네임(user_nickname)을 받아 컨트롤러 단으로 넘깁니다.<br>
+Dao는 DB와 연동하여 사용자가 입력한 닉네임을 DB에서 찾습니다.<br>
+Service에서는 Dao에서 반환한 결과(null이라면 true를 아니면 false)에 따라 값을 반환합니다. 컨트롤러단에서 다시 result 변수에 true/false값을 넣어 ajax로 반환합니다.<br>
+반환된 값에 따라 사용자에게 '사용가능한 닉네임입니다./사용 불가한 닉네임입니다.'를 알려줍니다.
+```javascript
+$('#user_nickname').blur(function() {
+			if ($(this).val() == "") {
+				$('#idCheck').html('중복결과 여부');
+			} else {
+				$.ajax({
+					type : 'GET',
+					url : 'getUserNn.do',
+					data : {
+						user_nickname : $('#user_nickname').val()
+					},
+					success : function(data) {
+						if (data == true) {
+							$('#idCheck').html('사용가능한 닉네임입니다.');
+						} else {
+							$('#idCheck').html('사용 불가한 닉네임입니다.');
+							$(this).focus();
+						}
+					},
+					error : function(xhrReq, status, error) {
+						alert(error)
+					}
+				});
+			}
+		});
+```
+컨트롤러
+```java
+@Controller
+public class UserController {
+	@Autowired
+	UserServiceImpl userService;
+
+  @RequestMapping(value = "/getUserNn.do")
+	@ResponseBody
+	public boolean getUserbyNn(HttpServletRequest req, HttpServletResponse resp) {
+				resp.setContentType("text/html; charset=UTF-8");
+				String user_nickname = req.getParameter("user_nickname");
+				boolean result = userService.getUserbyNn(user_nickname);
+				return result;
+			}
+  }
+```
+서비스
+```java
+@Service
+public class UserServiceImpl implements UserService {
+	@Autowired
+	UserDao udao;
+  @Override
+	  public boolean getUserbyNn(String user_nickname) {
+		    if (udao.selectUserbyNn(user_nickname) == null)
+			     return true;
+		    else
+			     return false;
+	}
+}
+```
+Dao
+```java
+public interface UserDao {
+public User selectUserbyNn(String user_nickname);
+}
+```
+mapper
+```xml
+<mapper namespace="dao.UserDao">
+	<select id="selectUserbyNn" parameterType="String"
+		resultType="user">
+		select * from User where user_nickname = #{user_nickname};
+	</select>
+</mapper>
+```
+applicationContext.xml
+```xml
+<bean class="org.mybatis.spring.mapper.MapperFactoryBean" id="userDao">
+		<property name="sqlSessionFactory" ref="SqlSessionFactory"></property>
+		<property name="mapperInterface" value="dao.UserDao"></property>
+</bean>
+```
+
+>전화번호 유효성검사
+
+<img src="/images/petst/join_login/phoneexception.jpg" width="300" height="40">
+<br><br>
+정규식을 사용했습니다.
+```javascript
+  var phonePattern = /^\d{3}-\d{3,4}-\d{4}$/;
+	if (!(phonePattern.test($('#user_phone').val()))) {
+		$('#phoneCheck').html('잘못된 입력입니다.');
+```
