--- a/_posts/post_portfolio/2019-01-25-port1_naver2.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver2.md
@@ -16,7 +16,6 @@ img{
 
 >약관 동의
 
-<br>
 [이전글](https://gaeungyeongsul.github.io/portfolio/2019/01/25/port1_naver.html)
 에서 보듯 네이버로 로그인 후 callback url를 호출하는데 코드를 보면 그 전에 네이버에서 받아온 회원정보인 naverUser 객체를 session에 저장해 둡니다. 이유는 session에 저장한 naverUser 객체를 회원가입 때 사용하기 위해서 입니다.
 
@@ -35,13 +34,14 @@ img{
 ```
 DB에 회원정보가 없다면 약관동의 페이지로 이동합니다.
 <br>
-<img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/agree.jpg" width="600" height="500">
+<img src="/images/petst/join_login/agree.jpg" width="600" height="500">
 <br><br>
 '동의하지 않음' 버튼을 누를 경우 nochk() 함수가 실행되어 가입이 불가하며,
 <br>
 '동의' 버튼을 누를 경우 chk()함수가 실행되어 체크박스 체크 여부를 확인하여 체크가 되어있지 않은 경우, 회원가입을 방지하였습니다.
 <br>
 alert창
+<br>
 <img src="/images/petst/join_login/terms1.jpg" width="280" height="80">
 <img src="/images/petst/join_login/terms2.jpg" width="280" height="80">
 <br><br>
@@ -81,7 +81,7 @@ function nochk(){
  </table>
 </form>
 ```
-
+<br>
 >회원가입 폼
 
 <img src="/images/petst/join_login/joinform1.jpg" width="600" height="500">
@@ -93,8 +93,7 @@ function nochk(){
 >닉네임 중복 여부
 
 <img src="/images/petst/join_login/nickexcept.jpg" width="300" height="40">
-
-<br><br>
+<br>
 ajax통신을 사용하여 비동기적으로 브라우저와 서버가 데이터를 주고 받는 방식을 사용하였습니다. <br>
 닉네임 중복여부를 확인 하기 위해 jsp단에서 사용자가 입력한 닉네임(user_nickname)을 받아 컨트롤러 단으로 넘깁니다.<br>
 Dao는 DB와 연동하여 사용자가 입력한 닉네임을 DB에서 찾습니다.<br>
@@ -180,7 +179,7 @@ applicationContext.xml
 		<property name="mapperInterface" value="dao.UserDao"></property>
 </bean>
 ```
-
+<br>
 >전화번호 유효성검사
 
 <img src="/images/petst/join_login/phoneexception.jpg" width="300" height="40">
