--- a/_posts/post_algo/2010-01-28-cod10.md
+++ b/_posts/post_algo/2010-01-28-cod10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "코딜리티 Lesson5 MaxCounters"
+title:  "코딜리티 Lesson5 PassingCars"
 date:   2019-01-28 17:15:11 +0000
 categories: [algorithm]
 tags: [algorithm]
