--- a/_posts/post_portfolio/2019-01-25-port3_naver.md
+++ b/_posts/post_portfolio/2019-01-25-port3_naver.md
@@ -15,11 +15,15 @@ img{
 <br>
 웹사이트 포트폴리오의 사진 및 코드를 설명하겠습니다.
 
+>반려동물 정보 입력
+
+반려동물 있음 체크 시 정보 입력 폼을 보여준다.
+
 
  반려동물 있음없음 체크박스 코드
  추가 삭제 코드
  가입시 예외 코드!
  넘어갈 때 json타입 코드!
- 컨트롤러, 서비스, dao, mapper 연결 코드는 다음게시글에
+
  <img src="c:/gaeungyeongsul/gaeungyeongsul.github.io/images/petst/join_login/joinform2.jpg" width="400" height="350">
  <br>
