--- a/_posts/post_algo/2019-01-29-cod11.md
+++ b/_posts/post_algo/2019-01-29-cod11.md
@@ -5,6 +5,9 @@ date:   2019-01-29 17:15:11 +0000
 categories: [algorithm]
 tags: [algorithm]
 ---
+처음 자바를 접했을 때 했던 과제들입니다.<br>
+이제와 다시 문제를 보니 정말 쉬웠는데 그땐 왜 고민했었는지..<br>
+
 1. 두개의 정수와, 한개의 사칙연산을 입력받아서
 계산의 값을 출력하세요.
 ```Java
