--- a/_posts/post_algo/2019-01-29-sql1.md
+++ b/_posts/post_algo/2019-01-29-sql1.md
@@ -5,6 +5,9 @@ date:   2019-01-29 17:15:11 +0000
 categories: [algorithm]
 tags: [algorithm]
 ---
+처음 sql을 접했을 때 했던 과제들입니다.<br>
+
+
 
 1.덧셈 연산자를 이용하여 모든 사원에대해 300원 급여 인상을 계산한후
 사원의 이름, 급여, 인상된 급여를 싹 출력<br>
