--- a/_posts/post_algo/2019-01-29-sql2.md
+++ b/_posts/post_algo/2019-01-29-sql2.md
@@ -5,6 +5,8 @@ date:   2019-01-29 17:15:11 +0000
 categories: [algorithm]
 tags: [algorithm]
 ---
+join을 사용하는 sql을 접했을 때 했던 과제들입니다.<br>
+
 1. 사원이름과 그 사원이 소속된 부서이름과 지역명 출력
 <br>
 select e.ename, e.deptno, d.dloc
