--- a/_posts/post_portfolio/2019-01-25-port1_naver.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver.md
@@ -98,4 +98,7 @@ loginForm.jsp<br>
 	}
 ```
 
-이렇게 네이버 로그인이 가능하며, 네이버로 회원가입은 다음 게시글에 포스팅하겠습니다.
+이렇게 네이버 로그인이 가능하며, 네이버로 회원가입은 다음 게시글에 포스팅하겠습니다.<br>
+로그인 성공하면 다음과 같이 헤더가 변경됩니다. <br>
+<img src="/images/petst/join_login/afterLogin.jpg" width="500" height="200">
+<br>
