--- a/_posts/post_portfolio/2019-01-25-port3_naver.md
+++ b/_posts/post_portfolio/2019-01-25-port3_naver.md
@@ -23,115 +23,112 @@ img{
 
 ```javascript
 $('.user_havePet').click(function() { //반려동물 있음 =>펫테이블 보이게하기
-			if ($(this).val() == 1)
-				$('#petTable').css('display', 'inline');
-		});
-		$('.user_havePet').click(function() { //반려동물 없음 =>펫테이블 사라지게하기
-			if ($(this).val() == 0) {
-				$('#petTable').css('display', 'none');
-			}
-		});
+  if ($(this).val() == 1)
+  $('#petTable').css('display', 'inline');
+});
+$('.user_havePet').click(function() { //반려동물 없음 =>펫테이블 사라지게하기
+  if ($(this).val() == 0) {
+    $('#petTable').css('display', 'none');
+  }
+});
 ```
 반려동물 추가(+)를 클릭 시 입력 폼이 추가되고 (-)를 누를 시  해당 입력 줄이 사라진다.<br>
 <img src="/images/petst/join_login/joinform3.jpg" width="500" height="240">
 <img src="/images/petst/join_login/joinform3_2.jpg" width="500" height="180"><br>
 ```javascript
 $(document).on('click', '.addPet', function() { //+클릭시 종 입력 줄 한줄 생성
-			if (clickNum > 9) {
-				alert('최대 10마리까지 입력 가능합니다.')
-			} else {
-				clickNum++;
-				$('#petTable').append('<tr><td><input type="text" class="pet_name" name="pet_name"></td>'
-					+ '<td><select class="pet_species">'
-					+ '<option value="0">종 선택</option>'
-					+ '<option value="1">개</option>'
-					+ '<option value="2">고양이</option>'
-					+ '<option value="3">토끼</option>'
-					+ '<option value="4">기타</option>'
-					+ '</select></td>'
-					+ '<td><select class="pet_gender">'
-					+ '<option value="0">성별</option>'
-					+ '<option value="1">여</option>'
-					+ '<option value="2">남</option>'
-					+ '<option value="3">중성화</option>'
-					+ '</select></td>'
-					+ '<td><input type="text" class="pet_age"></td>'
-					+ '<td class="removePet"><i class="fa fa-minus-square"></i></td>'
-					+ '</tr>')
-			}
-		})
-		$(document).on('click', '.removePet', function() { //-클릭시 그 줄 삭제
-			var thisR = $(this);
-			thisR.parent().remove();
-			if (clickNum > 1) {
-				clickNum--;
-			}
-		});
+  if (clickNum > 9) {
+    alert('최대 10마리까지 입력 가능합니다.')
+  } else {
+    clickNum++;
+    $('#petTable').append('<tr><td><input type="text" class="pet_name" name="pet_name"></td>'
+    + '<td><select class="pet_species">'
+    + '<option value="0">종 선택</option>'
+    + '<option value="1">개</option>'
+    + '<option value="2">고양이</option>'
+    + '<option value="3">토끼</option>'
+    + '<option value="4">기타</option>'
+    + '</select></td>'
+    + '<td><select class="pet_gender">'
+    + '<option value="0">성별</option>'
+    + '<option value="1">여</option>'
+    + '<option value="2">남</option>'
+    + '<option value="3">중성화</option>'
+    + '</select></td>'
+    + '<td><input type="text" class="pet_age"></td>'
+    + '<td class="removePet"><i class="fa fa-minus-square"></i></td>'
+    + '</tr>')
+  }
+})
+$(document).on('click', '.removePet', function() { //-클릭시 그 줄 삭제
+  var thisR = $(this);
+  thisR.parent().remove();
+  if (clickNum > 1) {
+    clickNum--;
+  }
+});
 ```
 
 >회원 가입
 
-회원 가입 시 다시 한번 닉네임, 전화번호, 반려동물 정보에 대한 예외를 검사한 후 컨트롤단으로 정보를 전송합니다. <br>
-이 때 반려동물은 pet 객체 list로 보내야 하는데, ajax로 객체타입 list를 보내도 컨트롤단에서 받지 못합다.
+회원 가입 시 다시 한번 닉네임, 전화번호, 반려동물 정보에 대한 예외를 검사한 후 컨트롤단으로 정보를 전송합니다. 이 때 반려동물은 pet 객체 list로 보내야 하는데, ajax로 객체타입 list를 보내도 컨트롤단에서 받지 못합다.
 <br>그래서 새로운 객체 petObject를 하나 만들어 키:밸류 값으로 만든 후 push함수를 이용해서 배열에 객체를 넣습니다. 이 때, 테이블의 행 개수만큼(입력된 펫 정보 개수 만큼) 넣었습니다.  
 ```javascript
 $('#petTable_tbody tr').each(function() {
-					var cellItem = $(this).find(":input");
-					var petObj = new Object();
-					petObj.pet_name = cellItem.eq(0).val();
-					petObj.pet_species = cellItem.eq(1).val();
-					petObj.pet_gender = cellItem.eq(2).val();
-					petObj.pet_age = cellItem.eq(3).val();
-					petArr.push(petObj);
-				})
+  var cellItem = $(this).find(":input");
+  var petObj = new Object();
+  petObj.pet_name = cellItem.eq(0).val();	petObj.pet_species = cellItem.eq(1).val();	petObj.pet_gender = cellItem.eq(2).val();
+  petObj.pet_age = cellItem.eq(3).val();
+  petArr.push(petObj);
+})
 ```
 그 후 ajax 통신을 사용하여 컨트롤 단으로 값들을 보냅니다.
 ```javascript
 $.ajax({
-				type : 'post',
-				url : 'joinUserNaver.do',
-				data : {
-					"jsonData" : JSON.stringify(petArr),
-					"user_nickname" : $('#user_nickname').val(),
-					"user_phone" : $('#user_phone').val(),
-					"user_havePet" : $("input:radio[name=user_havePet]:checked").val()
-				},
-				success : function(data) {
-					alert('가입되었습니다.');
-					window.location.href = "main.do";
-				},
-				error : function(xhrReq, status, error) {
-					alert(error)
-				}
-			});
+  type : 'post',
+  url : 'joinUserNaver.do',
+  data : {
+    "jsonData" : JSON.stringify(petArr),
+    "user_nickname" : $('#user_nickname').val(),
+    "user_phone" : $('#user_phone').val(),
+    "user_havePet" : $("input:radio[name=user_havePet]:checked").val()
+  },
+  success : function(data) {
+    alert('가입되었습니다.');
+    window.location.href = "main.do";
+  },
+  error : function(xhrReq, status, error) {
+    alert(error)
+  }
+});
 ```
 컨트롤단에서는 HashMap을 사용해 값을 받고
 ```java
 @RequestMapping(value = "/joinUserNaver.do", method = RequestMethod.POST)
-	@ResponseBody
-	public void joinUser(@RequestParam HashMap<String, Object> params, HttpServletResponse resp, HttpSession session) { 생략 }
+@ResponseBody
+public void joinUser(@RequestParam HashMap<String, Object> params, HttpServletResponse resp, HttpSession session) { 생략 }
 ```
 
 서비스 단에서 JsonParser를 사용하여 파싱시킨 후 model 객체에 값을 넣었습니다.
 ```java
-  JsonParser parser = new JsonParser();
-		JsonElement element = parser.parse(jsonStr);
-		JsonArray jArray = element.getAsJsonArray();
-		JsonObject jOb = new JsonObject();
-
-		for (int i = 0; i < jArray.size(); i++) {
-			jOb = jArray.get(i).getAsJsonObject();
-			if (!(jOb.get("pet_name").getAsString().equals(""))) {
-				Pet pet = new Pet();
-				pet.setUser_id(user.getUser_id());
-				pet.setPet_name(jOb.get("pet_name").getAsString());
-				pet.setPet_gender(jOb.get("pet_gender").getAsInt());
-				pet.setPet_species(jOb.get("pet_species").getAsString());
-				pet.setPet_age(jOb.get("pet_age").getAsInt());
-				udao.insertPet(pet);
-			}
-		}
+JsonParser parser = new JsonParser();
+JsonElement element = parser.parse(jsonStr);
+JsonArray jArray = element.getAsJsonArray();
+JsonObject jOb = new JsonObject();
+for (int i = 0; i < jArray.size(); i++) {
+  jOb = jArray.get(i).getAsJsonObject();
+  if (!(jOb.get("pet_name").getAsString().equals(""))) {
+    Pet pet = new Pet();
+    pet.setUser_id(user.getUser_id());
+    pet.setPet_name(jOb.get("pet_name").getAsString());
+    pet.setPet_gender(jOb.get("pet_gender").getAsInt());
+    pet.setPet_species(jOb.get("pet_species").getAsString
+    ());
+    pet.setPet_age(jOb.get("pet_age").getAsInt());
+    udao.insertPet(pet);
+  }
+}
 ```
 dao 매퍼를 사용해 DB와 연동 후 user table과 pet table에 값을 적절하게 넣습니다.
 <br>
-이렇게 로그인과 회원가입이 완료됩니다. 
+이렇게 로그인과 회원가입이 완료됩니다.
