--- a/_posts/post_portfolio/2019-02-02-port2_admin1.md
+++ b/_posts/post_portfolio/2019-02-02-port2_admin1.md
@@ -9,12 +9,15 @@ tags: [portfolio]
 img{
   border : 1px solid #ededed;
 }
+.title{
+  font-size : 20px;
+}
 </style>
 포트폴리오- 2. 관리자페이지1 : 관리자 계정
 <br>
 웹사이트 포트폴리오의 사진 및 코드를 설명하겠습니다.
 
->관리자 로그인 - header
+><p class="title">관리자 로그인 - header</p>
 
 일반인 계정과 관리자 계정으로 로그인 할 경우 메인페이지의 header와 각 게시판은 차이가 있습니다. 우선 header를 먼저 보겠습니다.
 <br>
@@ -90,7 +93,7 @@ jsp
   </c:choose>
 ```
 <br>
->관리자 로그인 - 게시판
+><p class="title">관리자 로그인 - 게시판</p>
 
 일반 회원의 경우 자신의 글만 수정, 삭제가 가능하지만 관리자 계정일 경우 모든 게시글의 수정, 삭제가 가능합니다. 또한 공지사항, 자주하는 질문 등의 게시판에서는 관리자만이 글쓰기가 가능합니다.
 <br>
