--- a/_posts/post_portfolio/2019-02-06-port2_admin4.md
+++ b/_posts/post_portfolio/2019-02-06-port2_admin4.md
@@ -20,3 +20,10 @@ img{
 >R(read) : 2. 게시글 하나 보기
 
 <img src="/images/petst/admin/readone.jpg" width="600" height="770"><br>
+
+게시글을 보거나 수정, 삭제 할 때 항상 현재 페이지, 검색어 등등을 파라미터로 가지고 다닙니다. 왜냐하면 a가 포함된 13페이지의 게시글을 본 후 목록을 클릭하면 a가 포함된 13페이지의 목록이 나와야하기 때문입니다.
+<br>
+
+>C(create) : 게시글 작성
+
+게시글을 
