--- a/_posts/post_portfolio/2019-02-06-port2_admin4.md
+++ b/_posts/post_portfolio/2019-02-06-port2_admin4.md
@@ -26,4 +26,31 @@ img{
 
 >C(create) : 게시글 작성
 
-게시글을 
+게시글 작성 시 스마트에디터를 사용했습니다.<br>
+다음과 같이 여러 장의 사진을 드래그 하여 업로드 할 수 있기 때문입니다.<br>
+<img src="/images/petst/admin/writephoto.jpg" width="800" height="400"><br>
+<img src="/images/petst/admin/write.jpg" width="700" height="400"><br>
+<br>
+게시글을 작성한 후 바로 내가 쓴 게시글로 가기 위 mapper를 다음과 같이 작성하였습니다.
+```xml
+<insert id="insertBoard" parameterType="notice" useGeneratedKeys="true" keyProperty="notice_boardno">
+  insert into notice values (0, #{notice_title}, #{notice_writeDate}, #{notice_readCount},
+  #{notice_content}, #{notice_contentPic}, #{notice_adminId})
+</insert>
+```
+
+>U(update) : 게시글 수정
+
+게시글 수정 역시 스마트에디터를 사용했습니다.<br>
+<img src="/images/petst/admin/modify.jpg" width="700" height="400"><br>
+수정 시 기존의 게시글 내용이 form에 나와 있어야 하므로 수정폼에 다음과 같이 덧붙여 줍니다.
+```javascript
+fOnAppLoad : function(){
+  var a = '${notice.notice_content}';
+  obj.getById["editor"].exec("PASTE_HTML", [a]);
+},
+```
+
+>D(delete) : 게시글 삭제
+
+게시글 삭제 시 게시글 번호를 받아와 DB에서 삭제합니다.
