--- a/_posts/post_portfolio/2019-02-06-port3_admin5.md
+++ b/_posts/post_portfolio/2019-02-06-port3_admin5.md
@@ -20,14 +20,19 @@ CURD게시판의 쓰기, 수정, 삭제는 이전 글과 같은 방식으로 작
 
 >고객센터-공지사항
 
-<img src="/images/petst/admin/custom.jpg" width="600" height="500"><br>
+<img src="/images/petst/admin/custom.jpg" width="600" height="550"><br>
 
 
 >고객센터-자주하는 질문
 
-<img src="/images/petst/admin/oftenq.jpg" width="600" height="500"><br>
+<img src="/images/petst/admin/oftenq.jpg" width="600" height="550"><br>
 
 >고객센터-1:1문의
 
-
->
+일반 회원이 질문을 하면 질문글에 관리자가 답하는 형식입니다.<br>
+일반회원의 경우 1:1문의 폼이 뜨고 관리자의 경우 회원들의 1:1문의 글 목록이 뜹니다.<br>
+<img src="/images/petst/admin/qna.jpg" width="800" height="300"><br>
+<br>
+답변 여부의 경우 comment의 유무에 따라 처리됨/미처리로 나뉩니다.
+<br>그래서 관리자가 답변을 하면 답변 여부가 변경됩니다.<br>
+<img src="/images/petst/admin/qna2.jpg" width="800" height="300"><br>
