--- a/_posts/post_portfolio/2019-02-07-port4_place2.md
+++ b/_posts/post_portfolio/2019-02-07-port4_place2.md
@@ -11,7 +11,9 @@ img{
 }
 </style>
 
-포트폴리오- 4. 반려동물 동반 가능 장소1
+포트폴리오- 4. 반려동물 동반 가능 장소2
 <br>
 
 >반려동물 동반 가능 장소 : 후기 작성 및 후기 보기
+
+<img src="/images/petst/place/sample.jpg" width="600" height="450"><br>
