--- a/_posts/post_portfolio/2019-02-07-port4_place.md
+++ b/_posts/post_portfolio/2019-02-07-port4_place.md
@@ -67,3 +67,43 @@ function searchPlaces() {
 }
 </script>
 ```
+
+>반려동물 동반 가능 장소 : 리스트 수정
+
+기존의 검색 결과 목록은 주소, 전화번호만 알려줍니다. 변경 후 해당 장소의 사이트에 접속 할 수 있습니다.<br>
+기존의 코드는 다음과 같습니다.
+```javascript
+// 검색결과 항목을 Element로 반환하는 함수입니다
+function getListItem(index, places) {
+
+    var el = document.createElement('li'),
+    itemStr = '<span class="markerbg marker_' + (index+1) + '"></span>' +
+                '<div class="info">' +
+                '   <h5>' + places.place_name + '</h5>';
+
+    if (places.road_address_name) {
+        itemStr += '    <span>' + places.road_address_name + '</span>' +
+                    '   <span class="jibun gray">' +  places.address_name  + '</span>';
+    } else {
+        itemStr += '    <span>' +  places.address_name  + '</span>';
+    }
+
+      itemStr += '  <span class="tel">' + places.phone  + '</span>' +
+                '</div>';           
+
+    el.innerHTML = itemStr;
+    el.className = 'item';
+
+    return el;
+}
+
+```
+
+이 때 places에는 x,y(위치좌표), place_url(상세페이지) 등이 있기 때문에 상세페이지로 연결시키기 위해 다음과 같이 덧붙여줍니다.
+```javascript
+itemStr += '<br><a href=' + places.place_url;
+itemStr += ' target="_blank">상세보기</a>';
+```
+<br>
+다음과 같이 상세보기 클릭 시 다음 상세페이지로 넘어갑니다.
+<br><img src="/images/petst/place/placedaum.jpg" width="600" height="300"><br>
