--- a/_posts/post_portfolio/2019-02-07-port4_place.md
+++ b/_posts/post_portfolio/2019-02-07-port4_place.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "포트폴리오- 4. 반려동물 동반 가능 장소1"
+title:  "포트폴리오- 4. 반려동물 동반 가능 장소"
 date:   2019-02-07 17:15:11 +0000
 categories: [portfolio]
 tags: [portfolio]
@@ -13,8 +13,8 @@ img{
 }
 </style>
 
-포트폴리오- 4. 반려동물 동반 가능 장소1
-<br>
+포트폴리오- 4. 반려동물 동반 가능 장소
+<br><br>
 
 >반려동물 동반 가능 장소 : 카카오 지도 api사용
 
@@ -67,7 +67,7 @@ function searchPlaces() {
 }
 </script>
 ```
-
+<br>
 >반려동물 동반 가능 장소 : 리스트 수정
 
 기존의 검색 결과 목록은 주소, 전화번호만 알려줍니다. 변경 후 해당 장소의 사이트에 접속 할 수 있습니다.<br>
@@ -107,3 +107,35 @@ itemStr += ' target="_blank">상세보기</a>';
 <br>
 다음과 같이 상세보기 클릭 시 다음 상세페이지로 넘어갑니다.
 <br><img src="/images/petst/place/placedaum.jpg" width="600" height="300"><br>
+<br>
+>반려동물 동반 가능 장소 : 후기 보기
+
+'펫프리뷰보기' 클릭 시 회원들이 작성한 리뷰 목록들이 나옵니다. <br>
+<img src="/images/petst/place/review.jpg" width="500" height="300"><br>
+이는 해당 장소의 x, y, place_name를 비교하여 후기들을 DB에서 찾는 방식으로 이뤄집니다. <br>
+<br>
+>반려동물 동반 가능 장소 : 후기 작성
+
+리뷰 목록 아래쪽에 후기 작성 칸이 있습니다. 작성을 클릭 시 다음과 같이 리뷰 목록에 작성한 내용이 올라갑니다.<br>
+<img src="/images/petst/place/writereview.jpg" width="500" height="500"><br>
+이 때 해당 장소의 좌표인 place_x, place_y, place_name, 후기 내용이 controller로 전송됩니다.
+```javascript
+$.ajax({
+  type : 'GET',
+  url : 'writePlaceReview.do',
+  data : {
+    "place_name" : $('.hospitalName').val(),
+    "place_x" : $('#hospitalX').val(),
+    "place_y" : $('#hospitalY').val(),
+    "place_review" : place_review
+  },
+```
+<br>
+> 공통
+
+리뷰 작성 시 엔터를 사용했지만, 내용을 저장하면 띄어쓰기로 저장됩니다. <br>
+그래서 작성 된 리뷰를 불러올 때 줄바꿈이 되지 않고 한줄로 나오게 됩니다.<br>
+따라서 이를 막기 위해 리뷰를 불러올 때 다음과 같은 처리를 합니다.
+```javascript
+var place_review =data[i].place_review.replace(/(?:\r\n|\r|\n)/g, '<br />');
+```
