--- a/_posts/post_portfolio/2019-01-25-port1_naver.md
+++ b/_posts/post_portfolio/2019-01-25-port1_naver.md
@@ -28,7 +28,7 @@ img{
 
 >네이버로 회원가입
 
-1. 회원가입 클릭 시 다음 컨트롤러로 이동합니다.<br>
+회원가입 클릭 시 다음 컨트롤러로 이동합니다.<br>
 ```java
 @RequestMapping(value="/joinwith.do")
     public ModelAndView joinwith(HttpSession session, Model model) {
@@ -46,7 +46,10 @@ joinwith.jsp<br>
 <a href="${url}"> <img src="네이버회원가입버튼사진.png"></a>
 ```
 <br>
-2. 로그인 클릭 시 다음 컨트롤러로 이동합니다.<br>
+
+>네이버로 로그인
+
+로그인 클릭 시 다음 컨트롤러로 이동합니다.<br>
 ```java
   @RequestMapping(value="/loginForm.do")
   public ModelAndView login(HttpSession session, @RequestParam(defaultValue="0") int state) {
@@ -71,9 +74,10 @@ loginForm.jsp<br>
 </td>
 ```
 <br>
-3. 공통
-<br>
-따라서 네이버로 로그인 버튼 클릭 시 네이버 인증 URL로 이동하여 로그인 창이 뜹니다.
+
+> 공통
+
+네이버로 로그인/회원가입 버튼 클릭 시 컨트롤러에서 받은 네이버 인증 URL로 이동하여 로그인 창이 뜹니다.
 <br>
 <br>
 <img src="/images/petst/join_login/naverlogin.jpg" width="500" height="400">
@@ -98,7 +102,6 @@ loginForm.jsp<br>
 	}
 ```
 
-이렇게 네이버 로그인이 가능하며, 네이버로 회원가입은 다음 게시글에 포스팅하겠습니다.<br>
 로그인 성공하면 다음과 같이 헤더가 변경됩니다. <br>
 <img src="/images/petst/join_login/afterLogin.jpg" width="500" height="200">
 <br>
