--- a/_posts/php/2019-03-08-php1_main1.md
+++ b/_posts/php/2019-03-08-php1_main1.md
@@ -1,7 +1,61 @@
 ---
 layout: post
-title:  "php포트폴리오- 1.메인 : 차트이용하기"
+title:  "1. 제이쿼리를 사용해 공공데이터를 사용하기"
 date:   2019-01-25 17:15:11 +0000
-categories: [portfolio]
-tags: [portfolio]
+categories: [php]
+tags: [php]
 ---
+
+국가에서 보유하고 있는 다양한 데이터를 따라 개방하여 국민들이 보다 쉽고 용이하게 공유•활용할 수 있게 했는데요, <br>
+[공공데이터 포털](https://www.data.go.kr/) 에서 다양한 데이터를 받아 올 수 있습니다. <br>
+<br>
+저의 경우 제주도 관광객 수를 차트로 나타내기 위해 xml 파일로 데이터를 받아왔습니다.
+<br>
+<img src="/images/php/main/data.jpg" width="400" height="100"><br><br>
+<img src="/images/php/main/dataxml.jpg" width="400" height="300">
+<br>
+<br>
+xml파일을 열어보면 다음과 같이 되어있습니다.<br>
+ROW 요소는 여러개의 자식 요소(구분, 상세, 2017년 1월~12월, 데이터기준일자)를 포함하고 있습니다.
+```xml
+<root>
+<!-- 생략 -->
+<Row>
+<구분>형태별</구분>
+<상세>개별여행</상세>
+<_2017년01월>894040</_2017년01월>
+<_2017년02월>821245</_2017년02월>
+<_2017년03월>805739</_2017년03월>
+<_2017년04월>950201</_2017년04월>
+<_2017년05월>929167</_2017년05월>
+<_2017년06월>1041106</_2017년06월>
+<_2017년07월>1016349</_2017년07월>
+<_2017년08월>1144262</_2017년08월>
+<_2017년09월>960818</_2017년09월>
+<_2017년10월>966747</_2017년10월>
+<_2017년11월>905898</_2017년11월>
+<_2017년12월>869130</_2017년12월>
+<데이터기준일자>2017-12-31</데이터기준일자>
+</Row>
+<!-- 생략 -->
+</root>
+```
+<br>
+xml파일을 제이쿼리로 파싱시킬 때 find()함수와 text()함수를 사용합니다.<br>
+find()함수로 원하는 요소를 찾고 text()함수로 그 요소의 값을 확인할 수 있습니다.
+```javascript
+$.get('../jeju/jeju_korean.xml', function(data) {
+  $(data).find("Row").each(function() {
+    if ($(this).find("구분").text() == "형태별") {
+      if($(this).find("상세").text() == "개별여행")
+        for (var i = 0; i < 12; i++) {
+          alert("_2017년" + (i + 1) + "월 관광객의 수 : " + $(this).find(name).text() + "명");
+        }
+      }
+    }
+  })
+});
+```
+jeju_korean.xml을 data 변수에 담아옵니다.<br>
+'구분'요소의 값이 '형태별'이면서 '상세'요소의 값이 '개별여행'인 조건 속에서 2017년 1월부터 12월의 관광객 수를 보여줍니다.
+그리고 foreach문을 통해 Row요소 만큼 반복하여 모든 데이터를 확인합니다.
