--- a/_posts/php/2019-03-08-php1_main2.md
+++ b/_posts/php/2019-03-08-php1_main2.md
@@ -7,7 +7,7 @@ tags: [php]
 ---
 >메인화면
 
-<img src="/images/php/main/main.PNG" width="600" height="700">
+<img src="/images/php/main/main.png" width="600" height="700">
 
 <br>
 이전글에서 다루었던 공공데이터를 사용해 이번에는 부트스트랩 차트로 보여줍니다.<br>
