--- a/_posts/php/2019-03-08-php1_main2.md
+++ b/_posts/php/2019-03-08-php1_main2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "1. 공공데이터를 사용해 부트스트랩 차트로 나타내기"
+title:  "1-2. 공공데이터를 사용해 부트스트랩 차트로 나타내기"
 date:   2019-03-08 17:15:11 +0000
 categories: [php]
 tags: [php]
