--- a/_posts/php/2019-03-09-php3_map2.md
+++ b/_posts/php/2019-03-09-php3_map2.md
@@ -21,7 +21,7 @@ tags: [php]
 <br>
 이 때 클릭한 마커에 대한 장소의 상세정보 중 장소 이름(place.place_name)을 네이버 검색으로 보냅니다.
 <br>
-
+<br>
 map.js
 ```javascript
 // 클릭한 마커에 대한 장소 상세정보를 커스텀 오버레이로 표시하는 함수입니다
@@ -43,11 +43,21 @@ function displayPlaceInfo (place) {
 }
 ```
 <br>
-naver_search.php에서 json_encode()를 사용하여 json타입으로 검색결과를 반환합니다.
+naver_search.php에서는 map.js에서 보낸 place_name을 받아 urlencode를 한 후 xml타입으로 검색 결과값을 받아옵니다.<br>
+json_encode()를 사용하여 json타입으로 검색결과를 반환합니다.
 <br><br>
 naver_search.php
 ```php
 try{
+  $place_name = "제주 ".$_GET['place_name'];
+  $client_id = 클라이언트 아이디;
+  $client_secret = 클라이언트 비번;
+  $method = $_SERVER['REQUEST_METHOD'];
+  $encText = urlencode($place_name);
+  $url = "https://openapi.naver.com/v1/search/blog.xml?query=".$encText; // xml 결과
+
+  //생략
+
   $result = new SimpleXMLElement($response);
   for($i = 0; $i <10 ; $i++){
     $str_date = $result->channel->item[$i]->postdate;
@@ -69,7 +79,7 @@ try{
 
 <br>
 naver_search.php에서 반환한 결과 값을 테이블에 출력합니다.
-<br>
+<br><br>
 map.js
 ```javascript
 success	: function(data) {
