--- a/_posts/php/2019-03-09-php4_board2.md
+++ b/_posts/php/2019-03-09-php4_board2.md
@@ -104,7 +104,7 @@ write.php
 include("../db/db.php");
 $conn = dbconn();
 $board_content = $_POST['contents'];
-$board_title = mysqli_real_escape_string($conn, $_POST['title']);
+$board_title = $conn->real_escape_string($_POST['title']);
 ```
 <br>
 board테이블에 제목, 내용 뿐 아니라 사용자의 아이디와 닉네임이 같이 저장됩니다. 그러므로 session에 있는 user_id의 값을 사용해 DB에 저장된 user_nickname을 가져옵니다.
@@ -120,11 +120,11 @@ getUser.php
 ```php
 function getUserNickname($conn, $user_id){
   $sql = "select * from user where user_id = '$user_id'";
-  $result = mysqli_query($conn, $sql);
+  $result = $conn->query($sql);
   if ($result) {
-    $row = mysqli_fetch_array($result);
+    $row = $result->fetch_object();
     if($row != null)
-      $user_nickname = $row['user_nickname'];
+      $user_nickname = $row->user_nickname;
   }
   return $user_nickname;
 }
@@ -139,7 +139,7 @@ write.php
 $sql = "insert into board(board_no, board_user_id, board_user_nickname, board_title,";
 $sql .=                   "board_content, board_views, board_write_date)";
 $sql .="VALUES(0, '$board_user_id', '$board_user_nickname', '$board_title', '$board_content', 0, now())";
-$result = mysqli_query($conn,$sql);
+$result = $conn->query($sql);
 if($result===false){
   echo "<script>
           alert('글쓰기에 실패하였습니다.');
@@ -147,7 +147,6 @@ if($result===false){
         </script>";
 }else{
   $board_no = mysqli_insert_id($conn);
-  mysqli_close($conn);
   header('Location: readBoard.php?board_no='.$board_no);
   exit;
 }
